# Sequential-FMPE

./: .gitignore
code/: pyproject.toml
code/notebooks/: .gitignore  SIR_flow.ipynb  gauss.ipynb  stochvol.ipynb
code/src/sfmpe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code/src/sfmpe/core/: dataset.py  distributions.py  simulator.py  summary.py
code/src/sfmpe/data/: round_dataset.py  simulation_store.py
code/src/sfmpe/flow/: flow_model.py  path.py  sampler.py  velocity.py
code/src/sfmpe/inference/: fm_estimator.py  pipeline.py
code/src/sfmpe/inference/sequential/: proposal.py  round_manager.py
code/src/sfmpe/tasks/: SIR.py  StochVol.py  StochVol2.py  base_task.py
code/src/sfmpe/utils/: logger.py  metrics.py
code/tests/: test_flow.py  test_logger.py  test_sequential.py
code/tests/test_configs/: sir_config.yaml
code/tests/test_datasets/: chunk_000000.pt  chunk_000001.pt
paper/: Makefile
paper/src/: term.tex
paper/src/dep/: draft_fall.tex
slides/: Makefile
slides/src/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  utils.py
slides/src/dep/: continuity equation.tex  preamble.tex  quick_tour.tex  sampling.tex  seq_methods.tex  seq_methods2.tex
